[tool.poetry]
name = "portfolio-api"
version = "0.1.0"
description = ""
authors = ["satoshi <3104nit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}
alembic = "^1.7.5"
SQLAlchemy = "^1.4.31"
mysqlclient = "^2.1.0"
python-decouple = "^3.5"
python-multipart = "^0.0.5"
SQLAlchemy-Utils = "^0.38.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-csrf-protect = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
